Centered elements, update

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 	<title>Coming soon</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>hello world</h1>
-	<img src="London Map.jpg">
+	<div id="container">
+		<h1>This is a London zipcode map</h1>
+		<img src="London_Map.jpg" id="map">
+	</div>
 </body>
 </html>
